// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render for active challenge 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Light",
                "fontSize": 24,
                "fontStyle": "normal",
                "lineHeight": 30,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Details
          </Text>
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  Add details to your Challenge (optional)
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`render for past challenge 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Light",
                "fontSize": 24,
                "fontStyle": "normal",
                "lineHeight": 30,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Details
          </Text>
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  Add details to your Challenge (optional)
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders no text when no details and not an admin 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Light",
                "fontSize": 24,
                "fontStyle": "normal",
                "lineHeight": 30,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Details
          </Text>
          <View
            style={Object {}}
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders with details 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Light",
                "fontSize": 24,
                "fontStyle": "normal",
                "lineHeight": 30,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B6BA",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "lineHeight": 16,
                  "textAlignVertical": "center",
                  "textTransform": "none",
                }
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "fontStyle": "normal",
                    "lineHeight": 38,
                    "textAlignVertical": "center",
                    "textTransform": "none",
                  },
                  null,
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Object {
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Details
          </Text>
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "marginBottom": 10,
                  "marginTop": 10,
                  "marginVertical": 10,
                  "width": "100%",
                }
              }
            >
              <Text
                style={Object {}}
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                        "fontFamily": "SourceSansPro-Regular",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "lineHeight": 24,
                        "textAlignVertical": "center",
                        "textTransform": "none",
                      },
                      Object {},
                    ]
                  }
                >
                  Super cool details
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
